<?xml version="1.0"?>
<package format="2">
  <name>astar</name>
  <version>0.0.0</version>
  <description>The scene_manager package</description>

  <maintainer email="rocky@todo.todo">rocky</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>



  <build_export_depend>rospy</build_export_depend>



  <exec_depend>rospy</exec_depend>



</package>
